--- a/assets/custom/custom2.css
+++ b/assets/custom/custom2.css
@@ -1,4 +1,22 @@
-/* Put your custom CSS here */
-.left {
-    margin-left: 0px;
+.reveal h1 { font-size: 1.5em; }
+
+.reveal h2 { font-size: 1.3em; }
+
+
+@media screen and (max-width: 4000px), (max-height: 6000px) {
+    .reveal .slides {
+        font-size: 0.7em;
+    }
+}
+
+@media screen and (max-width: 900px), (max-height: 600px) {
+    .reveal .slides {
+        font-size: 0.66em;
+    }
+}
+
+@media screen and (max-width: 700px), (max-height: 400px) {
+    .reveal .slides {
+        font-size: 0.66em;
+    }
 }
