--- a/_static/book_style.css
+++ b/_static/book_style.css
@@ -6,21 +6,14 @@ Use the classes defined here to control the look of HTML elements in your contri
 If you add new styles, remember explain what it does as shown below. 
 
 Index
-  - Style changes for fonts 
   - Styling for Table of Contents
   - Styling for Embedded Videos
 
 \*--------------------------------------------------------------------*/ 
 
-
-/* Style changes for fonts*/
-@import url('https://fonts.googleapis.com/css2?family=Raleway&display=swap');
-
-/* update font variable */
-:root {
-  --font-family-sans-serif: 'Raleway', -apple-system, BlinkMacSystemFont, Roboto, "Segoe UI", "Helvetica Neue", Arial, "Noto Sans", sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol", "Noto Color Emoji" !important;
-  --pst-font-family-base: var(--font-family-sans-serif);
-  --pst-background-color: #f5f4e9;
+html *
+{
+   color: #000 !important;
 }
 
 /*--------------------------------------------------------------------*\ 
