--- a/_static/book_style.css
+++ b/_static/book_style.css
@@ -13,7 +13,7 @@ Index
 
 html *
 {
-   color: #000 !important;
+   color: #000000d5 !important;
 }
 
 /*--------------------------------------------------------------------*\ 
